Fixed app header and footer alignments.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,8 @@
   background: var(--bg);
   border-bottom: 1px solid var(--ui);
   padding: var(--spacing);
+  display: flex;
+  align-items: center;
 }
 
 .App-body {
@@ -29,6 +31,6 @@
   width: 100%;
   border-top: 1px solid var(--ui);
   box-sizing: border-box;
-  height: 50px;
+  height: 60px;
   line-height: 0;
 }
